--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,10 @@ matrix:
       arch: amd64
       if: branch =~ appimage
 
+    - os: linux
+      dist: focal
+      arch: amd64
+
     - os: osx
 
 env:
